--- a/super-duper-octo-fortnight/super_duper_octo_fortnight/Server/appsettings.Development.json
+++ b/super-duper-octo-fortnight/super_duper_octo_fortnight/Server/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=ShoppingDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
